# GlowPad

./: .gitignore  LICENSE  README.md
firmware/: sdkconfig.defaults
firmware/main/: CMakeLists.txt  button.c  button.h  hello_world_main.c  idf_component.yml  led.c  led.h  led_color_lib.c  led_color_lib.h  led_driver.c  led_driver.h  led_strip_encoder.c  main.c  media_control.c  media_control.h  memory_game.c  memory_game.h  mode_manager.c  mode_manager.h  piano.c  piano.h  piezo.c  piezo.h  piezo_driver.c  piezo_driver.h  reaction_game.c  reaction_game.h  serial_protocol.c  serial_protocol.h  timer.c  timer.h  ws2812_control.c  ws2812_control.h
hardware/GlowPad/: GlowPad.kicad_pcb  GlowPad.kicad_pro  GlowPad.kicad_sch  GlowPad_BOM.csv
hardware/GlowPad/gerber/: GlowPad-B_Cu.gbr  GlowPad-B_Mask.gbr  GlowPad-B_Silkscreen.gbr  GlowPad-Edge_Cuts.gbr  GlowPad-F_Cu.gbr  GlowPad-F_Mask.gbr  GlowPad-F_Paste.gbr  GlowPad-F_Silkscreen.gbr  GlowPad-NPTH.drl  GlowPad-PTH.drl  GlowPad-job.gbrjob
